--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -11,6 +11,16 @@
 	date = {2000}
 }
 
+@inproceedings{fidge1988timestamps,
+	title={Timestamps in message-passing systems that preserve the partial ordering},
+	author={Fidge, Colin J},
+	booktitle={Proceedings of the 11th Australian Computer Science Conference},
+	volume={10},
+	number={1},
+	pages={56--66},
+	year={1988}
+}
+
 @inproceedings{allombert2007system,
   title={A system of interactive scores based on Petri nets},
   author={Allombert, Antoine and Assayag, G{\'e}rard and Desainte-Catherine, Myriam and others},
@@ -633,4 +643,15 @@ address = {Los Alamitos, CA, USA},
 	month=jan # "~4",
 	publisher={Google Patents},
 	note={US Patent 6,012,096}
+}
+
+@article{lamport1978time,
+	title={Time, clocks, and the ordering of events in a distributed system},
+	author={Lamport, Leslie},
+	journal={Communications of the ACM},
+	volume={21},
+	number={7},
+	pages={558--565},
+	year={1978},
+	publisher={ACM}
 }
