--- a/src/formalisation/ameliorations2f.tex
+++ b/src/formalisation/ameliorations2f.tex
@@ -19,10 +19,10 @@ Cela permet d'offrir plus de latitude au compositeur. Néanmoins le réseau de P
 \label{section:retropropag}
 Un processus a été conçu pour essayer de régler le problème des latences trop grandes entre nœuds.
 
-Il est utile dans le cas ou on n'a pas de point d'interactivité entre différents segments successifs.
+Il est utile dans le cas ou on n'a pas de point d'interaction entre différents segments successifs.
 
-\begin{mydef}[Point d'interactivité]
-	Un point d'interactivité (TODO nom à revoir?) est un endroit ou l'exécution du réseau de Petri est soumise à influence extérieure : temps souple, ou condition.
+\begin{mydef}[Point d'interaction]
+	Un point d'interaction est un endroit ou l'exécution du réseau de Petri est soumise à influence extérieure : condition, déclenchement interactif, etc. Une définition complète est donnée dans \cite[p. 148]{allombert2009aspects}.
 \end{mydef}
 
 \paragraph{Processus}
