--- a/src/glossaire.tex
+++ b/src/glossaire.tex
@@ -10,6 +10,20 @@
 	description={un mécanisme normalisé de prise de connaissance des services offerts sur un réseau local, principalement connu grâce à l'implémentation d'\brand{Apple} nommée \brand{Bonjour}}	
 }
 
+\newglossaryentry{sensibilisee}
+{
+	first={\underline{sensibilisée}},
+	name={sensibilisation (transition)},
+	description={une transition est sensibilisée ssi pour toute place d'entrée, elle possède au moins autant de jetons que le poids de l'arc menant à la transition~\cite[p. 35]{allombert2009aspects}}	
+}
+
+\newglossaryentry{franchie}
+{
+	first={\underline{franchie}},
+	name={franchissement (transition)},
+	description={le franchissement d'une transition consiste en la suppression de jetons de chacune de ses places d'entrée et l'ajout de jetons dans chacune de ses places de sortie et ce proportionnellement à la pondération des arcs}	
+}
+
 \newglossaryentry{CMake}
 {
 	name={CMake}, 
