--- a/src/implementation.tex
+++ b/src/implementation.tex
@@ -153,16 +153,18 @@ L'interface proposée est la suivante : (\texttt{group} peut être remplacé par
 
 En écriture sur le groupe : 
 \begin{itemize}
-	\item /group/enable/fonctionnalité
-	\item /group/disable/fonctionnalité
-	\item /group/parameter/nomDuParamètre id
+	\item \texttt{/group/enable/fonctionnalité}
+	\item \texttt{/group/disable/fonctionnalité}
+	\item \texttt{/group/parameter/nomDuParamètre id}
 \end{itemize}
 
 Émis par le groupe :
 \begin{itemize}
-	\item /group/connexions
-	\item /group/nomDuParamère/fonctionnalité
+	\item \texttt{/group/connexions}
+	\item \texttt{/group/nomDuParamère/fonctionnalité}
 \end{itemize}
 
 \subsection{Implémentation dans le logiciel i-score}
+\subsubsection{Algorithme opérant sur réseaux de Petri}
 \subsection{Démonstration dans le cadre d'un vrai scénario}
+\section{Résultats}
