--- a/src/problematique.tex
+++ b/src/problematique.tex
@@ -21,6 +21,7 @@ Des acteurs d'origines diverses participent au projet:
 Les interactions parfois complexes entre ces acteurs sont expliquées dans \cite{meyssonnier2013analyse}.
 
 \subsection{Présentation de OSSIA}
+\label{section.presOssia}
 Les travaux du projet portent en partie sur la réalisation d'un formalisme assez expressif pour permettre de s'en servir dans des cas d'usages très différents.
 
 Ce formalisme repose sur la notion de scénario interactif, qui elle-même repose sur la notion de temps, au sens ou on l'entend couramment, mais aussi étendu des manières présentées en \cref{tbl.tempsOSSIA}.
