--- a/src/formalisation/figures/deplacementMethode1.tex
+++ b/src/formalisation/figures/deplacementMethode1.tex
@@ -7,10 +7,12 @@ On déplace s sur un nœud $N_d$ :
   \tikzstyle{red place}=[place,draw=red!75,fill=red!20]
   \tikzstyle{transition}=[rectangle,thick,draw=black!75,
   			  fill=black!20,minimum size=4mm]
+  			  
+  \tikzstyle{black box}=[draw=black, fill=black!30, draw opacity=0.7, fill opacity=0.2, thick, dashed, inner sep=0.5cm]
 
 
   \begin{scope}
-    \node [transition] (Tk) [label=$t$] {};
+    \node [transition] (Tk) [label=$t_p$] {};
 	\node [segment] (Pk) [left of=Tk] {$\pre(p)$};
 	\node [segment] (S) [right of=Tk] {$s$};
 	\node [segment] (Sk) [below of=S] {$\post(p) \setminus s$};
@@ -19,13 +21,18 @@ On déplace s sur un nœud $N_d$ :
   		(Pk) edge[post] node {} (Tk)
   		(Tk) edge[post] node {} (S)
   			 edge[post] node {} (Sk);
-  			 
+  
+   \begin{pgfonlayer}{background}
+    \node [black box, fit=(Tk) (Pk) (S) (Sk)] (Box1) {};
+    \node[above right] at (Box1.south west) {Nœud $N$};
+   \end{pgfonlayer}
   \end{scope}
+  
   
 \end{tikzpicture}
 
 \vspace{1em}
-{\huge$\downarrow$}
+Devient
 \vspace{1em}
 
 \begin{tikzpicture}[node distance=1.3cm,>=stealth,bend angle=45,auto]
@@ -35,13 +42,16 @@ On déplace s sur un nœud $N_d$ :
    \tikzstyle{red place}=[place,draw=red!75,fill=red!20]
    \tikzstyle{transition}=[rectangle,thick,draw=black!75,
    fill=black!20,minimum size=4mm]
+   
+    \tikzstyle{black box}=[draw=black, fill=black!30, draw opacity=0.7, fill opacity=0.2, thick, dashed, inner sep=0.7cm]
+    \tikzstyle{red box}=[draw=red, minimum size=2.1cm, fill=red!30, draw opacity=0.7, fill opacity=0.2, thick, dashed, inner sep=0.7cm]
  
   \begin{scope}
-	\node [transition] (Tk) [label=$t - \delta$] {};
+	\node [transition] (Tk) [label=$t_p - \delta$] {};
   	\node [segment] (Pk) [left of=Tk] {$\pre(p)$};
-  	\node [segment] (S) [right of=Tk] {$s$};
+  	\node [segment] (S) [right of=Tk] at (1.5, 2) {$s$};
     
-    \node [place] (PN) [below of=S] {};
+    \node [place] (PN) at (1, -1.3){};
     \node [transition] (TN) [right of=PN,  label=$\delta$] {};
     \node [segment] (Sk) [right of=TN] at (3, -1.3) {$\post(p) \setminus s$};
     \node [segment] (C) [below of=Sk] {$\memory(s, p)$};
@@ -54,6 +64,13 @@ On déplace s sur un nœud $N_d$ :
       (TN) edge[post] node {} (Sk)
       	   edge[post] node {} (C); 
     	
+    \begin{pgfonlayer}{background}
+    \node [black box, fit=(Tk) (Pk) (Sk) (PN) (TN) (C)] (Box1) {};
+    \node[above right] at (Box1.south west) {Nœud $N$};
+    
+     \node [red box, fit=(S)] (Box2) {};
+     \node[above left] at (Box2.south east) {Nœud $N_d$};
+     \end{pgfonlayer}
    \end{scope}
    
 \end{tikzpicture}
